cncProd/force-app/main/default/objects/Defect__c/fields/Date_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Created_Date_Time__c</fullName>
    <description>For report to show the Date/Time</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Created (Date/Time)</label>
    <type>DateTime</type>
</CustomField>