cncProd/force-app/main/default/objects/Defect__c/fields/Defect_Header__c.field-meta.xml
<CustomField>
    <fullName>Defect_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defect Header</label>
    <referenceTo>Defect_Header__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>Defects</relationshipName>
    <type>Lookup</type>
</CustomField>