cncProd/force-app/main/default/objects/Defect__c/fields/Description_of_Defect__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Defect__c</fullName>
    <label>Description of Defect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>