cncProd/force-app/main/default/objects/Defect__c/fields/Type_of_Defect__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Defect__c</fullName>
    <label>Type of Defect</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Paint and Body</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>